--- a/roly.conf
+++ b/roly.conf
@@ -2,4 +2,5 @@
 /home/albarral/DEV/roly/roly_bodycore/dist/Debug/GNU-Linux
 /home/albarral/DEV/roly/roly_bodycoms/dist/Debug/GNU-Linux
 /home/albarral/DEV/roly/roly_body/dist/Debug/GNU-Linux
+/home/albarral/DEV/roly/roly_interface/dist/Debug/GNU-Linux
 
